# rust-archives-2023-2024

./: README.md  core.rs  get_sessions.rs  test.rs
assembler_call/: Cargo.toml
assembler_call/src/: main.rs  met.S
cheat-finder/: Cargo.toml  build.rs
cheat-finder-old/cheat-finder/: build.rs
cheat-finder-old/cheat-finder/src/: hash.txt  main.rs
cheat-finder-old/core/: Cargo.toml
cheat-finder-old/core/src/: WinPrefetchView.cfg  main.rs
cheat-finder-old/runner/: Cargo.toml  build.rs
cheat-finder-old/runner/src/: main.rs  main2.rs
cheat-finder/src/: main.rs
encrypt-test/: README.txt  _steal_injector.js  index.html
encrypt-test/prints/: Cargo.toml
encrypt-test/prints/src/: main.rs  private_key.txt  private_pwd.txt  public_key.txt
hook-tests/: Cargo.toml  build.rs
hook-tests/src/: detours_wrapper.cpp  main.rs
pdtest/: Cargo.toml  build.rs
pdtest/src/: execute.rs  main.rs
randomtest/: Cargo.toml
randomtest/src/: main.rs
readlines/: Cargo.toml
readlines/src/: main.rs
speedtest/: Cargo.toml  README.txt  dirs  dirs2
speedtest/.cargo1/: config.toml
speedtest/src/: main.rs  main_classic.rs  main_old.rs  main_ram_bb.rs  main_scp.rs  main_stack.rs  main_vec_stack.rs  not_work.rs  not_work_number10.rs
tgtest/: Cargo.toml
tgtest/src/: main.rs
tool-with-service/: Cargo.toml  build.rs
tool-with-service/src/: core.rs  core.rs.bak  main.rs
winlangtest/: Cargo.toml
winlangtest/src/: main.rs
