[package]
name = "cheat-finder"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"

[dependencies]
iced-x86 = "1.21.0"
sysinfo = "0.30"
winfw = "0.1.8"

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1
