[package]
name = "win_clear"
version = "1.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",

    "Win32_Security_Authentication_Identity",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
] }
windows-service = "0.7.0"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1
