[package]
name = "cheat-finder"
version = "0.0.0"
edition = "2021"

[build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"

[dependencies]
winfw = "0.1.8"
sha256 = "1.4.0"
sysinfo = "0.30.2"
chrono = "0.4.31"
rand = "0.8.5"
include-crypt-bytes = "0.1"
keyvalues-serde = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2.11.0", features = ["https"] }

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1
