[package]
name = "prints"
version = "0.1.0"
edition = "2021"

[dependencies]
#base16ct = { version = "0.2", features = ["alloc"] }
#hex-literal = "0.4.1"
#pem-parser = "0.1.1"
#pkcs1 = { version = "0.7.5", features = ["pem", "pkcs8"] }
#pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "pkcs5"] }
#rand = "0.8.5"
#ring = "0.17.8"
#rsa_public_encrypt_pkcs1 = "0.4.0"
#sha2 = "0.10.8"
#sha3 = "0.10.8"
base64 = "0.22.1"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1

[env]
OPENSSL_DIR = "C:\\Users\\fydne1\\Desktop\\code\\rust\\.integration\\vcpkg\\installed\\x64-windows-static"
OPENSSL_STATIC = "YES"
VCPKGRS_DYNAMIC = "1"